added endpoint to register landlord