@@ -1,9 +1,9 @@
 package tz.tante.rent.manager.configs.security;
 
 import jakarta.servlet.FilterChain;
-import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import org.springframework.lang.NonNull;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
@@ -12,7 +12,7 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 import tz.tante.rent.manager.utilities.JwtUtils;
 import java.io.IOException;
-import java.util.stream.Collectors;
+import java.util.List;
 
 @Component
 public class JwtAuthenticationFilter extends OncePerRequestFilter
@@ -25,29 +25,38 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter
   }
 
   @Override
-  protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain) throws ServletException, IOException
+  protected void doFilterInternal(@NonNull HttpServletRequest request,
+                                  @NonNull HttpServletResponse response,
+                                  @NonNull FilterChain filterChain) throws IOException
   {
-
-    String authHeader = request.getHeader("Authorization");
-    if (authHeader != null && authHeader.startsWith("Bearer "))
+    try
     {
-      String token = authHeader.substring(7);
-      if (jwtUtils.validateToken(token))
+      String authHeader = request.getHeader("Authorization");
+      if (authHeader != null && authHeader.startsWith("Bearer "))
       {
-        String email = jwtUtils.getEmailFromToken(token);
-        var roles = jwtUtils.getRolesFromToken(token).stream()
-          .map(SimpleGrantedAuthority::new)
-          .collect(Collectors.toList());
+        String token = authHeader.substring(7);
+        if (jwtUtils.validateToken(token))
+        {
+          String email = jwtUtils.getEmailFromToken(token);
+          List<SimpleGrantedAuthority> roles = jwtUtils.getRolesFromToken(token)
+            .stream()
+            .map(SimpleGrantedAuthority::new)
+            .toList();
 
-        var authToken = new UsernamePasswordAuthenticationToken(email, null, roles);
-        authToken.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
-        SecurityContextHolder.getContext().setAuthentication(authToken);
+          var authToken = new UsernamePasswordAuthenticationToken(email, null, roles);
+          authToken.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
+          SecurityContextHolder.getContext().setAuthentication(authToken);
+        }
       }
+
+      filterChain.doFilter(request, response);
     }
-    else
+    catch (Exception exception)
     {
-      System.out.println(" NO Bear JWT validation : ");
+      response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+      response.setContentType("application/json");
+      response.getWriter().write(exception.getMessage());
     }
-    filterChain.doFilter(request, response);
+
   }
 }
